--- a/MoJaPoltApp/mainwindow.ui
+++ b/MoJaPoltApp/mainwindow.ui
@@ -534,7 +534,7 @@
         </font>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; font-style:italic; text-decoration: underline; color:#00ffff;&quot;&gt;显示数据&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string/>
        </property>
        <property name="pixmap">
         <pixmap resource="myimage.qrc">:/myImage/image/Up.png</pixmap>
@@ -643,6 +643,23 @@
       <normaloff>:/myImage/image/Down_Black.png</normaloff>:/myImage/image/Down_Black.png</iconset>
     </property>
    </widget>
+   <widget class="QPushButton" name="loadButton">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>460</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>载入</string>
+    </property>
+    <property name="icon">
+     <iconset resource="myimage.qrc">
+      <normaloff>:/myImage/image/Load.png</normaloff>:/myImage/image/Load.png</iconset>
+    </property>
+   </widget>
    <zorder>label_24</zorder>
    <zorder>label</zorder>
    <zorder>verticalLayoutWidget</zorder>
@@ -654,6 +671,7 @@
    <zorder>horizontalLayoutWidget</zorder>
    <zorder>upButton</zorder>
    <zorder>downButton</zorder>
+   <zorder>loadButton</zorder>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
